--- a/app/styles/toast.scss
+++ b/app/styles/toast.scss
@@ -5,7 +5,7 @@
     bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 600;
+    z-index: 1002;
     will-change: transform;
     animation-name: toast;
     animation-duration: 3.5s;
